# doxx

./: .gitignore  1  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  RELEASE_v0.1.2.md  flake.nix  result
.agents/: README.md
.agents/archive/: audit-2024.md  gemini-audit.md
.agents/development/: README.md  project-audit.md  roadmap.md
.agents/development/architecture/: document-widget.md  widget-integration.md
.agents/development/enhancements/: document-refactoring.md  font-size-headings.md  position-memory.md  table-cell-merge.md
.agents/development/infrastructure/: fixture-cleanup.md
.agents/operations/: ci-troubleshooting.md  known-issues.md  performance.md  release.md  workflows.md
.github/workflows/: ci.yml  release.yml  security.yml  update-homebrew.yml
.planning/: homebrew-automation-setup.md  keymap-shortcuts.md
assets/: demo.tape
experiments/ratatui_image_test/: Cargo.toml  INTEGRATION.md  README.md
experiments/ratatui_image_test/src/: main.rs
scripts/: README.md  check.sh  pre-push.hook  quick-check.sh
src/: ai.rs  ansi.rs  document.rs  document_legacy.rs  equation.rs  export.rs  lib.rs  main.rs  state.rs  terminal_image.rs  theme.rs  ui.rs
src/document/: cleanup.rs  io.rs  legacy.rs  loader.rs  mod.rs  models.rs  query.rs
src/document/parsing/: equation.rs  formatting.rs  heading.rs  list.rs  mod.rs  numbering.rs  table.rs
src/widgets/: document.rs  mod.rs
tests/: ansi_export_test.rs  integration_test.rs  mixed_formatting_test.rs  search_functionality_test.rs  strikethrough_test.rs
tests/fixtures/: color-showcase.docx  edge-cases.docx  equation-issue.docx  equations.docx  example.docx  feature-showcase.docx  ~$xample.docx
