[package]
name = "doxx"
version = "0.1.1"
edition = "2024"
description = "Terminal document viewer for .docx files"
license = "MIT"
repository = "https://github.com/bgreenwell/doxx"
homepage = "https://github.com/bgreenwell/doxx"
documentation = "https://github.com/bgreenwell/doxx#readme"
readme = "README.md"
authors = ["bgreenwell"]
keywords = ["docx", "terminal", "document", "viewer", "tui"]
categories = ["command-line-utilities", "text-processing"]
default-run = "doxx"
exclude = [
    "CLAUDE.md",
    "assets/",
    "src/bin/generate_test_docs.rs",
    "tests/fixtures/README.md",
    ".DS_Store",
    "*.tmp",
    "*.log",
    "*.bak",
    "*~",
]

[lib]
name = "doxx"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Document parsing
docx-rs = "0.4.18"

# Terminal UI
ratatui = "0.29.0"
crossterm = "0.29.0"
arboard = "3.6.1"

# Image support
viuer = { version = "0.9.2", features = ["print-file"] }
image = "0.25.6"
zip = "4.5.0"
ratatui-image = "8.0.1"

tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs"] }

# Text processing
unicode-segmentation = "1.12.0"
regex = "1.11.2"
once_cell = "1.21.3"

# CLI and utilities
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
thiserror = "2.0.16"

# Configuration
dirs = "6.0.0"
toml = "0.9.5"

# Release optimizations
[profile.release]
codegen-units = 1
lto = true
